add customer project